--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_HOST= 35.223.245.21
+DB_PORT=8080
+DB_DATABASE=Tweetpartial
 DB_USERNAME=root
 DB_PASSWORD=
 
